<resources>
    <string name="app_name">Bright Star</string>
    <string name="loglogin">Login</string>
    <string name="logsignup">Sign up</string>
    <string name="logwelcome">Welcome!</string>
    <string name="loghowwework">How we work ?</string>
    <string name="logaboutus">We provide a modern learning environment where children can access specially-designed early learning concepts</string>
    <string name="loginbrightstar">Bright Star</string>
    <string name="logingotosignup">Don\'t have an account ? Sign up</string>
    <string name="loginwelcomeback">Welcome back !</string>
    <string name="loginforgotpassword">Forgot password ?</string>
    <string name="loginusername">Username</string>
    <string name="loginpassword">Password</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="selectrolekids">Kids</string>
    <string name="selectroleparents">Parents</string>
    <string name="selectrolehello_their">Hello their !</string>
    <string name="pleaseselectrole">Please select your role.</string>

    <string name="maths">Maths</string>
    <string name="evs">EVS</string>
    <string name="english">English</string>

    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="comparision">Comparison</string>
    <string name="eg1">4 + 5 = ?</string>
    <string name="eg2">3 + 4 = ?</string>
    <string name="eg3">3 + 5 = ?</string>
    <string name="subeg1">9 – 3 = ?</string>
    <string name="subeg2">5 – 1 = ?</string>
    <string name="subeg3">6 – 3 = ?</string>
    <string name="nextQuestion">Next question</string>
    <string name="finish">Finish</string>
    <string name="nine">9</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="seventeen">17</string>
    <string name="eleven">11</string>
    <string name="twenty">20</string>
    <string name="parentsec_backbutton">parentsec_backbutton</string>
    <string name="parentseclogo">parentseclogo</string>
    <string name="parentsecbright_star">Bright Star</string>
    <string name="parentsec_parent">Parent</string>
    <string name="parentsec_starlogo">parentsec_starlogo</string>
    <string name="parentsec_weekly_graph">Weekly Graph</string>
    <string name="parrentsec_proceed1">parrentsec_proceed!</string>
    <string name="parentsec_3Month">3 Month</string>
    <string name="report">Report</string>
    <string name="parentsec_starlogo2">parentsec_starlogo2</string>
    <string name="parentsec_proceed2">parentsec_proceed2</string>
    <string name="parentsec_starlogo3">parentsec_starlogo3</string>
    <string name="course_pie">Course Pie</string>
    <string name="parentsec_chart">Chart</string>
    <string name="parentsec_proceed3">parentsec_proceed3</string>
    <string name="kidsec_back">kidsec_back</string>
    <string name="kidsec_logo">kidsec_logo</string>
    <string name="kidsec_heading">Bright Star</string>
    <string name="string_kidsec_heading">Bright Star</string>
    <string name="kidsec_Kids">KIDS</string>
    <string name="kidsec_logo2">kidsec_logo2</string>
    <string name="kidsec_learning">LEARNING</string>
    <string name="kidsec_proceed1">kidsec_proceed!</string>
    <string name="kidsec_logo3">kidsec_logo3</string>
    <string name="kidsec_games">GAMES</string>
    <string name="kidsec_proceed2">kidsec_proceed2</string>
    <string name="kidsec_success_logo">kidsec_success_logo</string>
    <string name="kidsec_Success">SUCCESS</string>
    <string name="kidsecproceed3">kidsecproceed3</string>
    <string name="hellosignup">Hello! sign up to get started</string>
    <string name="fullnameforsignup">Full name</string>
    <string name="phonenoforsign">Phone No.</string>
    <string name="emailidforsign">Email ID</string>
    <string name="confirmpasswordforsign">Confirm Password</string>
    <string name="gobacktolog">Already have an account?Log In</string>
    <string name="englishsub">ENGLISH</string>
    <string name="mathssub">MATHS</string>
    <string name="generalknowledgesub">GENERAL KNOWLEDGE</string>
    <string name="whattoday">What do you want to learn today ?</string>
    <string name="additionchp1">Addition</string>
    <string name="subtractionchp2">Subtraction</string>
    <string name="comparisionchp3">Comparison</string>
    <string name="missingchp4">Missing</string>
    <string name="beforeandafterchp5">Before and After</string>
    <string name="rhym">Rhyming</string>
    <string name="back_arrows">TODO</string>
    <string name="back_arrow">TODO</string>
    <string name="alphabet">Alphabets</string>
    <string name="select_the_missing_consonant_in_the_given_order_p_q_r_t">Select the missing consonant in the given order P Q R _ T.</string>
    <string name="exit_but">TODO</string>
    <string name="I">I</string>
    <string name="u">U</string>
    <string name="a">A</string>
    <string name="s">S</string>
    <string name="bacbutton">TODO</string>
    <string name="alphabe">Alphabets</string>
    <string name="select_the_vowel_from_the_options">Select the vowel from the options.</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="exit_button">TODO</string>
    <string name="o">O</string>
    <string name="n">N</string>
    <string name="back_button">TODO</string>
    <string name="alphabets">Alphabets</string>
    <string name="select_the_word_which_begins_with_a_consonant">Select the word which begins with a consonant.</string>
    <string name="kite">kite</string>
    <string name="ink">ink</string>
    <string name="oven">oven</string>
    <string name="apple">apple</string>
    <string name="green">green</string>
    <string name="red">red</string>
    <string name="blue">blue</string>
    <string name="black">black</string>
    <string name="a_colour_that_rhymes_with_bed_is">A colour that rhymes with BED is?</string>
    <string name="rhyming">Rhyming</string>
    <string name="button">TODO</string>
    <string name="butoon">TODO</string>
    <string name="nap">nap</string>
    <string name="map">map</string>
    <string name="lap">lap</string>
    <string name="cap">cap</string>
    <string name="something_you_wear_that_rhymes_with_tap_is">Something you wear that rhymes with TAP is?</string>
    <string name="sentence_formation">Sentence Formation</string>
    <string name="identify_the_verb_in_the_following_n_the_monkey_sat_by_the_door">Identify the verb in the following \n The monkey sat by the door</string>
    <string name="sat">sat</string>
    <string name="door">door</string>
    <string name="monkey">monkey</string>
    <string name="by">by</string>
    <string name="identify_the_verb_in_the_following_sentence_n_the_monkey_sat_by_the_door">Identify the verb in the following sentence. \n The monkey sat by the door.</string>
    <string name="identify_the_noun_in_the_following_sentence_n_i_live_in_mumbai">Identify the noun in the following sentence. \n I live in Mumbai</string>
    <string name="i">I</string>
    <string name="in">in</string>
    <string name="mumbai">Mumbai</string>
    <string name="live">live</string>
    <string name="identify_the_pronoun_in_the_following_sentence_n_they_were_having_dinner">Identify the pronoun in the following sentence. \n They were having dinner.</string>
    <string name="they">they</string>
    <string name="dinner">dinner</string>
    <string name="having">having</string>
    <string name="were">were</string>
    <string name="alphabetsindex">Alphabets</string>
    <string name="sentenceformationindex">Sentence Formation</string>
    <string name="rhymingindex">Rhyming</string>
    <string name="caprhyone">cap</string>
    <string name="naprhyone">nap</string>
    <string name="maprhyone">map</string>
    <string name="laprhyone">lap</string>
    <string name="nextquestionrhy">Next Question</string>
    <string name="evsheading">EVS</string>
    <string name="evs_continents">Continents</string>
    <string name="animals">Animals</string>
    <string name="evscontents_festivals">Festivals</string>
    <string name="evs_human_body">Human Body</string>
    <string name="evs_heading">EVS</string>
    <string name="rhymingwordforfoxisrhym3">Rhyming word for FOX is?</string>
    <string name="hatrhym3">hat</string>
    <string name="netrhym3">net</string>
    <string name="fanrhym3">fan</string>
    <string name="boxrhym3">box</string>
    <string name="evs_animals2">Animals</string>
    <string name="evs_national_animal_of_india">National Animal Of INDIA</string>
    <string name="evs_lion_lives_in">Lion Lives In ?</string>
    <string name="cows_lives_in">Cows Lives In ?</string>
    <string name="den">DEN</string>
    <string name="stable">STABLE</string>
    <string name="shed">SHED</string>
    <string name="jungle">JUNGLE</string>
    <string name="calf">Calf</string>
    <string name="young_one_of_horse">Young One Of Horse</string>
    <string name="cub">Cub</string>
    <string name="foal">Foal</string>
    <string name="lamb">Lamb</string>
    <string name="evs_festivals">Festivals</string>
    <string name="which_festival_is_considered_as_festival_of_lights">Which Festival Is Considered As Festival Of Lights?</string>
    <string name="holi">Holi</string>
    <string name="eid">EID</string>
    <string name="navratri">NAVRATRI</string>
    <string name="diwali">Diwali</string>
    <string name="which_festival_is_celebrated_as_the_birth_of_lord_krishna">Which Festival Is Celebrated As the Birth of Lord Krishna?</string>
    <string name="janmashtami">Janmashtami</string>
    <string name="the_main_motive_of_festivals_is_to_spread">The Main Motive Of Festivals is To Spread?</string>
    <string name="love">love</string>
    <string name="peace">Peace</string>
    <string name="happiness">Happiness</string>
    <string name="all">All</string>
    <string name="evs_finish1">Finish</string>
    <string name="tiger">TIGER</string>
    <string name="wolf">WOLF</string>
    <string name="horse">HORSE</string>
    <string name="lion">LION</string>
    <string name="evs_finish2">Finish</string>
    <string name="human_body">Human Body</string>
    <string name="our_both_hands_have_fingers">Our Both Hands Have_______Fingers?</string>
    <string name="evshumanbody_four">four</string>
    <string name="evshumanbody_five">five</string>
    <string name="evs_humanbody_eight">eight</string>
    <string name="evs_humanbody_ten">ten</string>
    <string name="we_smell_food_with">We Smell Food With?</string>
    <string name="evshumanbody_eyes">Eyes</string>
    <string name="evs_humanbodynose">Nose</string>
    <string name="evs_humanbodymouth">Mouth</string>
    <string name="evs_humanbody_ears">Ears</string>
    <string name="heart">Heart</string>
    <string name="which_of_the_following_is_the_not_sensory_organ">Which Of The Following Is The NOT Sensory Organ?</string>
    <string name="progress">Progress</string>
</resources>