<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kidsec_background"
    android:orientation="vertical"
    tools:context=".kidsection">

    <Button
        android:id="@+id/kidtolog"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_baseline_arrow_back_ios_24"
        android:gravity="center"
        android:textSize="40sp"
        android:translationX="5dp"
        android:translationY="5dp"
        tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />


    <ImageView
        android:id="@+id/kidsec_headinglogo"
        android:layout_width="90dp"
        android:layout_height="85dp"
        android:translationX="335dp"
        android:translationY="-75dp"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck, ContentDescription" />

    <TextView
        android:id="@+id/kidssecKIDS"
        android:layout_width="118dp"
        android:layout_height="68dp"
        android:fontFamily="sans-serif"
        android:text="@string/kidsec_Kids"
        android:textColor="#9C27B0"
        android:textSize="50sp"
        android:textStyle="bold"
        android:translationX="150dp"
        android:translationY="-120dp"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <ImageView
        android:id="@+id/kidseclearninglogo"
        android:layout_width="61dp"
        android:layout_height="68dp"
        android:background="@drawable/kidssec_logo2"
        android:contentDescription="@string/kidsec_logo2"
        android:translationX="40dp"
        android:translationY="-85dp" />

    <TextView
        android:id="@+id/kidsecLearning"
        android:layout_width="214dp"
        android:layout_height="59dp"
        android:text="@string/kidsec_learning"
        android:textColor="#D32F2F"
        android:textSize="42sp"
        android:textStyle="bold"
        android:translationX="105dp"
        android:translationY="-150dp"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <ImageButton
        android:id="@+id/kidtolearn"
        android:layout_width="108dp"
        android:layout_height="97dp"
        android:background="@drawable/kidsec_nextbutton"
        android:contentDescription="@string/kidsec_proceed1"
        android:translationX="310dp"
        android:translationY="-230dp"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,ImageContrastCheck,ImageContrastCheck" />

    <ImageView
        android:id="@+id/kidsecgamelogo"
        android:layout_width="74dp"
        android:layout_height="59dp"
        android:background="@drawable/kidsec_logo3"
        android:contentDescription="@string/kidsec_logo3"
        android:translationX="30dp"
        android:translationY="-200dp" />

    <TextView
        android:id="@+id/kidsecGames"
        android:layout_width="174dp"
        android:layout_height="53dp"
        android:text="@string/kidsec_games"
        android:textColor="#673AB7"
        android:textSize="42sp"
        android:textStyle="bold"
        android:translationX="110dp"
        android:translationY="-260dp" />

    <ImageButton
        android:id="@+id/kidsectogame"
        android:layout_width="108dp"
        android:layout_height="97dp"
        android:background="@drawable/kidsec_nextbutton"
        android:contentDescription="@string/kidsec_proceed2"
        android:translationX="310dp"
        android:translationY="-335dp"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,ImageContrastCheck,ImageContrastCheck" />

    <ImageView
        android:id="@+id/kidsecsuccesslogo"
        android:layout_width="94dp"
        android:layout_height="114dp"
        android:background="@drawable/kidsec_logo4"
        android:contentDescription="@string/kidsec_success_logo"
        android:translationX="20dp"
        android:translationY="-330dp" />

    <TextView
        android:id="@+id/kidsecSuccess"
        android:layout_width="190dp"
        android:layout_height="56dp"
        android:text="@string/progress"
        android:textColor="#E91E63"
        android:textSize="42sp"
        android:textStyle="bold"
        android:translationX="110dp"
        android:translationY="-425dp" />

    <ImageButton
        android:id="@+id/kidsecnext3"
        android:layout_width="108dp"
        android:layout_height="97dp"
        android:background="@drawable/kidsec_nextbutton"
        android:contentDescription="@string/kidsecproceed3"
        android:translationX="310dp"
        android:translationY="-505dp"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,ImageContrastCheck,ImageContrastCheck,ImageContrastCheck" />


</LinearLayout>