<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/evs_bg2"
    android:orientation="vertical"
    tools:context=".evs_festivals">

    <Button
        android:id="@+id/humtwoto1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="13dp"
        android:background="@drawable/ic_baseline_arrow_back_ios_24"
        android:gravity="center"
        android:translationX="35dp"
        android:translationY="54dp"
        tools:ignore="SpeakableTextPresentCheck,Suspicious0dp,TextContrastCheck" />

    <TextView
        android:id="@+id/textView109"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/human_body"
        android:textColor="#F57F17"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/exithum2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="13dp"
        android:background="@drawable/ic_round_exit_to_app_24"
        android:translationX="320dp"
        android:translationY="-47dp"
        tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />


    <TextView
        android:id="@+id/textView111"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center_horizontal"
        android:text="@string/we_smell_food_with"
        android:textColor="#FF0101"
        android:textSize="35sp"
        android:translationY="-30dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/humtwowro3"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="10dp"
        android:background="#F3A889"
        android:text="@string/evshumanbody_eyes"
        android:textSize="45sp"
        android:translationX="30dp"
        tools:ignore="ButtonStyle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/humtwocor"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="10dp"
        android:background="#F3A889"
        android:text="@string/evs_humanbodynose"
        android:textSize="45sp"
        android:translationX="195dp"
        android:translationY="-60dp"
        tools:ignore="ButtonStyle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/humtwowro2"
        android:layout_width="136dp"
        android:layout_height="62dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="10dp"
        android:background="#F3A889"
        android:text="@string/evs_humanbodymouth"
        android:textSize="35sp"
        android:translationX="25dp"
        tools:ignore="ButtonStyle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/humtwowro1"
        android:layout_width="127dp"
        android:layout_height="69dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="10dp"
        android:background="#F3A889"
        android:text="@string/evs_humanbody_ears"
        android:textSize="35sp"
        android:translationX="195dp"
        android:translationY="-65dp"
        tools:ignore="ButtonStyle" />

    <Button
        android:id="@+id/humtwoto3"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:background="#F3A889"
        android:text="@string/nextQuestion"
        android:textSize="25sp"
        android:translationY="-15dp" />


</LinearLayout>