<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/evs_bg2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".evs_animals">


    <Button
        android:id="@+id/anithreeto2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="13dp"
        android:background="@drawable/ic_baseline_arrow_back_ios_24"
        android:gravity="center"
        android:textSize="40sp"
        android:translationX="40dp"
        android:translationY="50dp"
        tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/evs_animals2"
        android:textColor="#F57F17"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/exitani3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="13dp"
        android:background="@drawable/ic_round_exit_to_app_24"
        android:translationX="300dp"
        android:translationY="-55dp"
        tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center_horizontal"
        android:text="@string/young_one_of_horse"
        android:textColor="#FF0101"
        android:textSize="40sp"
        android:translationY="-30dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/anithreewro3"
        android:layout_width="146dp"
        android:layout_height="75dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="10dp"
        android:background="#F474A6"
        android:text="@string/calf"
        android:textSize="40sp"
        android:translationX="20dp"
        tools:ignore="ButtonStyle,DuplicateSpeakableTextCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/anithreewro1"
        android:layout_width="146dp"
        android:layout_height="79dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="10dp"
        android:background="#F474A6"
        android:text="@string/cub"
        android:textSize="40sp"
        android:translationX="20dp"
        android:translationY="50dp"
        tools:ignore="ButtonStyle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/anithreewro2"
        android:layout_width="146dp"
        android:layout_height="79dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="10dp"
        android:background="#F474A6"
        android:text="@string/lamb"
        android:textSize="40sp"
        android:translationX="180dp"
        android:translationY="-155dp"
        tools:ignore="ButtonStyle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/anithreecor"
        android:layout_width="146dp"
        android:layout_height="79dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="10dp"
        android:background="#F474A6"
        android:text="@string/foal"
        android:textSize="38sp"
        android:translationX="180dp"
        android:translationY="-110dp"
        tools:ignore="ButtonStyle" />

    <Button
        android:id="@+id/finshani"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:background="#F474A6"
        android:text="@string/evs_finish2"
        android:textSize="25sp"
        android:translationY="-55dp" />






</LinearLayout>